--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb://seydousoow:B2oba92i@ds151416.mlab.com:51416/heroku_wvqdd3w7
 spring.data.rest.default-page-size=28
+#spring.data.mongodb.uri=mongodb://localhost:27017/shop
