--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.data.rest.default-page-size=28
-spring.data.mongodb.host=ds151416.mlab.com
-spring.data.mongodb.port=51416
-spring.data.mongodb.username=seydousoow
-spring.data.mongodb.password=B2oba92i
-spring.data.mongodb.database=heroku_wvqdd3w7
+spring.data.mongodb.host=node45878-cerberus.atl.jelastic.vps-host.net
+#spring.data.mongodb.port=51416
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=KVQyei92963
+spring.data.mongodb.database=shopShoe
 
