--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,2 @@
 spring.data.rest.default-page-size=28
-spring.data.mongodb.host=ds151416.mlab.com
-spring.data.mongodb.port=51416
-spring.data.mongodb.username=seydousoow
-spring.data.mongodb.password=B2oba92i
-spring.data.mongodb.database=heroku_wvqdd3w7
-
+spring.data.mongodb.uri=mongodb+srv://cerberus6575:B2oba92i@shopcluster-basdw.mongodb.net/shop?retryWrites=true
