--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
 		    <artifactId>java-jwt</artifactId>
 		    <version>3.8.0</version>
 		</dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongo-java-driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.10.2</version>
+        </dependency>
     </dependencies>
 
     <build>
