showing sql queries

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.data.rest.default-page-size=28
 spring.data.mongodb.uri=mongodb+srv://cerberus6575:B2oba92i@shopcluster-basdw.mongodb.net/shop?retryWrites=true
 spring.profiles.active=production
 #Show the sql query
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
