Setting defaulttimeZone and updating the controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.uri=mongodb+srv://cerberus6575:B2oba92i@shopcluster-basdw.mo
 spring.profiles.active=production
 #Show the sql query
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
+spring.jackson.time-zone=UTC
