--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.profiles.active=production
 #Show the sql query
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
 spring.jackson.time-zone=UTC
-#server.port=8081
+server.port=8081
+spring.mongodb.embedded.version=4.0.10
