--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.data.rest.default-page-size=24
 spring.data.mongodb.uri=mongodb+srv://cerberus6575:B2oba92i@shopcluster-basdw.mongodb.net/shop?retryWrites=true
 spring.profiles.active=production
-#Show the sql query
+spring.jpa.show-sql=true
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
 spring.jackson.time-zone=UTC
-server.port=8081
 spring.mongodb.embedded.version=4.0.10
