--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.show-sql=true
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
 spring.jackson.time-zone=UTC
 spring.mongodb.embedded.version=4.0.10
+server.port=8081
